--- a/Bengaluru_House_Prices_Data_Cleaning.ipynb
+++ b/Bengaluru_House_Prices_Data_Cleaning.ipynb
@@ -47,7 +47,20 @@
       "metadata": {
         "id": "x9vfVAsbslya"
       },
-     
+      "source": [
+        "### Context\n",
+        "\n",
+        "A techie residing in Mumbai who is a data scientist got an excellent job opportunity from one of his dream company in Bengaluru. Now, he wants to shift to Bengaluru soon and decides to buy a home in the city.\n",
+        "The lack of trust in property developers in the city resulted in a drop of 7% in the housing units sales across India in 2017. The property prices in Bengaluru fell by almost 5% in the second half of 2017, said a study published by a property consultancy firm called Knight Frank. Here's the link to the news article:\n",
+        "\n",
+        "[Residential real estate prices drop 3% in big cities\n",
+        "](https://www.businesstoday.in/sectors/infra/residential-real-estate-prices-property-drop-3-per-cent-realty/story/267752.html)\n",
+        "\n",
+        "Buying a home, especially in a city like Bengaluru, is a tricky choice. While the major factors are usually the same for all metro cities, there are others to be considered for the Silicon Valley of India. Because of the millennial crowd, vibrant culture, great climate and a slew of job opportunities in Bengaluru, it is difficult to ascertain the price of a house in the city.\n",
+        "As he is a data scientist he finds the dataset for Bengaluru house prices on the internet.\n",
+        "\n",
+        "The dataset he found was vast with some useless information and some of the empty values, he only wants to extract some of the useful information from the dataset."
+      ]
     },
     {
       "cell_type": "markdown",
@@ -63,7 +76,22 @@
       "metadata": {
         "id": "M8b9tQ1DyJ3j"
       },
-     
+      "source": [
+        "### Problem Statement\n",
+        "\n",
+        "The dataset acquired by the techie is full of irregularities, incorrect values and missing values. As a data scientist (or analyst in this context), your task is to clean the dataset given to you in this problem statement. \n",
+        "\n",
+        "This process of preparing data for analysis by removing or modifying data that is incorrect, incomplete, irrelevant, duplicated, or improperly formatted is known as data cleaning.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wDxT79GYyJIk"
+      },
+      "source": [
+        "---"
+      ]
     },
     {
       "cell_type": "markdown",
